añadido casi la home al completo en vista movil

--- a/HTML/home.html
+++ b/HTML/home.html
@@ -22,7 +22,7 @@
                     inscríbete a
                     continuación</p>
             </div>
-            <div id="socios_btn">
+            <div id="socios_btn" class="dos_botones">
                 <button>Inicia Sesión</button>
                 <button>Hazte Miembro</button>
             </div>
@@ -44,7 +44,7 @@
                 incentivar el estilo de vida deportivo.</p>
             <div class="banner" id="eventos_banner">
                 <div id="eventos_texto_banner" class="sub_banner">
-                    <h4 class="recogida_popular">Recogida Popular</h4>
+                    <h4 class="titulo_mini">Recogida Popular</h4>
                     <p>
                         Nos reuniremos para recoger las pelotas extraviadas durante los partidos, y haremos un taller
                         para los niños en los que fabricaremos...
@@ -53,16 +53,16 @@
             </div>
         </section>
         <section id="home_tienda">
-            <h3>La Tienda</h3>
+            <h2>La Tienda</h2>
             <p>En nuestra tienda encontrarás todos los productos vendidos por los socios en su mejor calidad.</p>
-            <div class="banner_home_tienda">
-                <div class="banner_texto_home_tienda">
-                    <h4>Último Producto a la venta</h4>
+            <div id="banner_home_tienda" class="banner">
+                <div id="banner_texto_home_tienda" class="sub_banner">
+                    <h4 class="titulo_mini">Último Producto a la venta</h4>
                     <p>Pack: 3 Pelotas 8€</p>
                 </div>
             </div>
         </section>
-        <section id="reserva_clases">
+        <section id="reserva_clases" class="dos_botones">
             <button>Reserva Pista</button>
             <button>Clases</button>
         </section>
