--- a/HTML/index.html
+++ b/HTML/index.html
@@ -11,24 +11,49 @@
 <body>
     <header>
         <img class="header_img" src="/public/assets/imgs/logotipo_negro.svg" alt="">
-        <img src="/public/assets/icons/Shopping_Basket.svg" alt="">
-        <img src="/public/assets/icons/Customer.svg" alt="">
-        <img src="/public/assets/icons/Menu.svg" alt="">
+        <div id="desktop_menu">
+            <button class="desktop_show orange_btn" id="boton_miembro">
+                ¡Hazte Miembro!
+            </button>
+            <button class="desktop_show" id="boton_identificate">
+                <img src="/public/assets/icons/Customer.svg" alt="">
+                Identifícate
+            </button>
+            <img src="/public/assets/icons/Shopping_Basket.svg" alt="">
+        </div>
+        <img class="desktop_hide" src="/public/assets/icons/Customer.svg" alt="">
+        <img class="desktop_hide" src="/public/assets/icons/Menu.svg" alt="">
     </header>
     <main id="home">
         <section id="home_socios">
             <div id="portada">
-                <p>¡Bienvenidos a EivissaPadel! Si aún no eres miembro de nuestro club, descubre las ventajas e
+                <p class="desktop_hide">¡Bienvenidos a EivissaPadel! Si aún no eres miembro de nuestro club, descubre
+                    las ventajas e
                     inscríbete a
                     continuación</p>
+                <nav class="desktop_show">
+                    <ul>
+                        <li>El Club</li>
+                        <li>Tienda</li>
+                        <li>Reserva</li>
+                        <li>Clases</li>
+                        <li>Contacto</li>
+                        <li>Blog</li>
+                    </ul>
+                </nav>
             </div>
-            <div id="socios_btn" class="dos_botones">
+            <div id="socios_btn" class="desktop_hide dos_botones">
                 <button>Inicia Sesión</button>
                 <button>Hazte Miembro</button>
             </div>
-            <h3>Ventajas de ser miembro</h3>
+            <h3 class="desktop_hide">Ventajas de ser miembro</h3>
+            <p class="desktop_show">¡Bienvenidos a EivissaPadel! Si aún no eres miembro de nuestro club, descubre
+                las ventajas e
+                inscríbete a
+                continuación</p>
             <div class="banner" id="miembro_banner">
                 <div id="miembro_texto_banner" class="sub_banner">
+                    <h2 class="desktop_show">Ventajas miembros</h2>
                     <ul>
                         <li>Acceso a la tienda</li>
                         <li>Descuentos en las actividades</li>
@@ -42,14 +67,51 @@
             <h2>Nuestros Últimos Eventos</h2>
             <p>En EivissaPadel organizamos eventos regularmente para concienciar a la comunidad sobre el medioambiente e
                 incentivar el estilo de vida deportivo.</p>
-            <div class="banner" id="eventos_banner">
-                <div id="eventos_texto_banner" class="sub_banner">
-                    <h4 class="titulo_mini">Recogida Popular</h4>
-                    <p>
-                        Nos reuniremos para recoger las pelotas extraviadas durante los partidos, y haremos un taller
-                        para los niños en los que fabricaremos...
-                    </p>
+            <div class="banner_desktop">
+                <div class="banner eventos_banner">
+                    <div class="eventos_texto_banner sub_banner">
+                        <h4 class="titulo_mini">Recogida Popular</h4>
+                        <p>
+                            Nos reuniremos para recoger las pelotas extraviadas durante los partidos, y haremos un
+                            taller
+                            para los niños en los que fabricaremos con las pelotas ya gastadas juguetes para poder
+                            entretenerse y aprender más sobre el padel y sus normas. Al terminar, los juguetes podrán
+                            ser llevados a casa para el disfrute de toda la familia y que aprendan también así a
+                            compartir con los demás.
+                        </p>
+                    </div>
                 </div>
+
+                <div class="banner eventos_banner desktop_show">
+                    <div class="eventos_texto_banner sub_banner">
+                        <h4 class="titulo_mini">Torneo Solidario</h4>
+                        <p>
+                            En esta ocasión, nos reuniremos para organizar un torneo de nivel D mixto, en el que el 75%
+                            de la recaudación irá destinada para la cartera de eventos medioambientales del club y el
+                            25% para el premio de los ganadores del torneo. En esta ocasión contamos con una cena en el
+                            restaurante Senses de Matutes y con dos palas edición limitada de Adidas con el borde de
+                            acero y un punto suave muy equilibrado, ¡ánimo a todos!
+                        </p>
+                    </div>
+                </div>
+
+                <div class="banner eventos_banner desktop_show">
+                    <div class="eventos_texto_banner sub_banner">
+                        <h4 class="titulo_mini">Limpiando Juntos</h4>
+                        <p>
+                            Hacemos un llamado a la población de Eivissa para unirse a nosotros en una jornada dedicada
+                            a la limpieza y preservación del entorno local. Juntos, recorreremos nuestras instalaciones
+                            de pádel y sus alrededores, recolectando residuos y contribuyendo a la mejora del medio
+                            ambiente.
+                            Esta iniciativa busca fomentar la conciencia ambiental y la responsabilidad comunitaria.
+                            Además, queremos destacar la participación activa de los más pequeños en "Limpiando Juntos".
+                            Los niños tendrán la oportunidad de convertirse en defensores del medio ambiente,
+                            aprendiendo sobre la importancia de cuidar nuestro entorno mientras participan en
+                            actividades educativas y divertidas diseñadas especialmente para ellos.
+                        </p>
+                    </div>
+                </div>
+
             </div>
         </section>
         <section id="home_tienda">
@@ -92,7 +154,7 @@
             </div>
         </section>
         <div class="contactanos-btn">
-            <button id="contactanos">Contáctanos</button>
+            <button class="orange_btn">Contáctanos</button>
         </div>
     </main>
     <footer>
