el club añadido

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -68,8 +68,8 @@
             <p>En EivissaPadel organizamos eventos regularmente para concienciar a la comunidad sobre el medioambiente e
                 incentivar el estilo de vida deportivo.</p>
             <div class="banner_desktop">
-                <div class="banner eventos_banner">
-                    <div class="eventos_texto_banner sub_banner">
+                <div class="banner banner_three eventos_banner">
+                    <div class="eventos_texto_banner sub_banner_three sub_banner">
                         <h4 class="titulo_mini">Recogida Popular</h4>
                         <p>
                             Nos reuniremos para recoger las pelotas extraviadas durante los partidos, y haremos un
@@ -82,8 +82,8 @@
                     </div>
                 </div>
 
-                <div class="banner eventos_banner desktop_show">
-                    <div class="eventos_texto_banner sub_banner">
+                <div class="banner banner_three eventos_banner desktop_show">
+                    <div class="eventos_texto_banner sub_banner sub_banner_three">
                         <h4 class="titulo_mini">Torneo Solidario</h4>
                         <p>
                             En esta ocasión, nos reuniremos para organizar un torneo de nivel D mixto, en el que el 75%
@@ -95,8 +95,8 @@
                     </div>
                 </div>
 
-                <div class="banner eventos_banner desktop_show">
-                    <div class="eventos_texto_banner sub_banner">
+                <div class="banner banner_three eventos_banner desktop_show">
+                    <div class="eventos_texto_banner sub_banner sub_banner_three">
                         <h4 class="titulo_mini">Limpiando Juntos</h4>
                         <p>
                             Hacemos un llamado a la población de Eivissa para unirse a nosotros en una jornada dedicada
@@ -117,13 +117,45 @@
         <section id="home_tienda">
             <h2>La Tienda</h2>
             <p>En nuestra tienda encontrarás todos los productos vendidos por los socios en su mejor calidad.</p>
-            <div id="banner_home_tienda" class="banner">
-                <div id="banner_texto_home_tienda" class="sub_banner">
-                    <h4 class="titulo_mini">Último Producto a la venta</h4>
-                    <p>Pack: 3 Pelotas</p>
-                    <p>
-                        8€
-                    </p>
+            <h3 class="desktop_show">Últimos productos a la venta</h3>
+            <div class="banner_desktop">
+                <div id="banner_home_tienda" class="banner banner_three">
+                    <div class="sub_banner sub_banner_three">
+                        <h4 class="titulo_mini">Pack de 3 pelotas</h4>
+                        <p>8€</p>
+                        <br>
+                        <p>
+                            Este conjunto clásico de 3 pelotas ha sido usado tan solo dos veces, la persona propietaria
+                            se lesionó y quiere venderlas antes de dejar que se malogren y así saber que alguien las
+                            disfrutará en su lugar.
+                        </p>
+                    </div>
+                </div>
+                <div class="banner banner_three desktop_show">
+                    <div class="sub_banner sub_banner_three">
+                        <h4 class="titulo_mini">Pala Pro de Padel</h4>
+                        <p>
+                            45€
+                        </p>
+                        <br>
+                        <p>Pala profesional de Pádel con un equilibrado punto blando. Utilizada durante medio año por un
+                            jugador, cambiada porque le han regalado una pala superior que se corresponde a su
+                            categoría, así que no dejes pasar este ofertón, ¡no pasan a menudo!</p>
+                    </div>
+                </div>
+                <div class="banner banner_three desktop_show">
+                    <div class="sub_banner sub_banner_three">
+                        <h4 class="titulo_mini">Camiseta blanca</h4>
+                        <p>
+                            5€
+                        </p>
+                        <br>
+                        <p>
+                            Camiseta blanca que no ha llegado a ser utilizada por un problema de tamaño. El miembro
+                            propietario de la camiseta ha decidido venderla para favorecer a la asociación en vez de
+                            devolverla a la tienda ¡gracias por tu trabajo!
+                        </p>
+                    </div>
                 </div>
             </div>
         </section>
@@ -134,11 +166,13 @@
         <section id="home_club">
             <h3>El Club</h3>
             <div id="botones_dedo">
+                <div class="imagen_club desktop_show">
+                </div>
                 <button>
                     La asociación<img src="/public/assets/icons/HandCursor.svg" alt="">
                 </button>
                 <button>
-                    Compromiso medioambiental<img src="/public/assets/icons/HandCursor.svg" alt="">
+                    Compromiso <br>medioambiental<img src="/public/assets/icons/HandCursor.svg" alt="">
                 </button>
             </div>
         </section>
