--- a/HTML/index.html
+++ b/HTML/index.html
@@ -23,15 +23,10 @@
                 <img src="/public/assets/icons/Shopping_Basket.svg" alt="">
             </div>
             <img class="desktop_hide" src="/public/assets/icons/Customer.svg" alt="">
-            <div>
-                <input class="desktop_hide" type="checkbox" name="" id="menu_mobile">
-                <label for="menu_mobile" class="menu_mobile_icon">
-                    <img class="desktop_hide" src="/public/assets/icons/Menu.svg" alt="">
-                </label>
-            </div>
+            <img class="desktop_hide" src="/public/assets/icons/Menu.svg" alt="">
+            <input class="desktop_hide" type="checkbox" name="" id="menu_mobile">
             <div class="nav_mobile">
-                <div class="close">
-                    <label for="menu_mobile">X</label>
+                <div class="close">X
                 </div>
                 <nav>
                     <ul>
