terminado cosas comunes

--- a/HTML/tienda.html
+++ b/HTML/tienda.html
@@ -7,8 +7,78 @@
     <link rel="stylesheet" href="../CSS/style.css">
 </head>
 <body>
-    <header></header>
+    <header>
+        <div class="banner_verde">
+            <a href="/HTML/index.html">
+                <img class="header_img" src="/public/assets/imgs/logotipo_negro.svg" alt="">
+            </a>
+            <div id="desktop_menu">
+                <button class="desktop_show orange_btn" id="boton_miembro">
+                    ¡Hazte Miembro!
+                </button>
+                <button class="desktop_show" id="boton_identificate">
+                    <img src="/public/assets/icons/Customer.svg" alt="">
+                    Identifícate
+                </button>
+                <a href="#">
+                    <img src="/public/assets/icons/Shopping_Basket.svg" alt="">
+                </a>
+            </div>
+            <a href="/HTML/socios.html">
+                <img class="desktop_hide" src="/public/assets/icons/Customer.svg" alt="">
+            </a>
+            <img class="desktop_hide" src="/public/assets/icons/Menu.svg" alt="">
+            <input class="desktop_hide" type="checkbox" name="" id="menu_mobile">
+            <div class="nav_mobile">
+                <div class="close">X
+                </div>
+                <nav>
+                    <ul>
+                        <li><a href="/HTML/club.html">El Club</a></li>
+                        <li><a href="/HTML/tienda.html">Tienda</a></li>
+                        <li><a href="#">Reserva</a></li>
+                        <li><a href="#">Clases</a></li>
+                        <li><a href="#">Contacto</a></li>
+                        <li><a href="#">Blog</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
+        <div id="portada">
+            <p class="desktop_hide">¡Bienvenidos a EivissaPadel! Si aún no eres miembro de nuestro club, descubre
+                las ventajas e
+                inscríbete a
+                continuación</p>
+            <nav class="desktop_show">
+                <ul>
+                    <li><a href="/HTML/club.html">El Club</a></li>
+                    <li><a href="/HTML/tienda.html">Tienda</a></li>
+                    <li><a href="#">Reserva</a></li>
+                    <li><a href="#">Clases</a></li>
+                    <li><a href="#">Contacto</a></li>
+                    <li><a href="#">Blog</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
     <main id="tienda"></main>
-    <footer></footer>
-</body>
+    <footer>
+        <div class="footer_container">
+            <div id="links">
+                <img src="/public/assets/icons/YouTube.png" alt="">
+                <img src="/public/assets/icons/Instagram.png" alt="">
+                <img src="/public/assets/icons/TwitterX.png" alt="">
+                <img src="/public/assets/icons/Facebook.png" alt="">
+            </div>
+            <div class="footer_desktop">
+                <div>
+                    <p>Política legal</p>
+                </div>
+                <div>
+                    <p>971396338 - EivissaPadel SL</p>
+                    <p>Todos los derechos reservado ©️</p>
+                </div>
+            </div>
+        </div>
+    </footer></body>
 </html>
