--- a/HTML/index.html
+++ b/HTML/index.html
@@ -11,7 +11,9 @@
 <body>
     <header>
         <div class="banner_verde">
-            <img class="header_img" src="/public/assets/imgs/logotipo_negro.svg" alt="">
+            <a href="/HTML/index.html">
+                <img class="header_img" src="/public/assets/imgs/logotipo_negro.svg" alt="">
+            </a>
             <div id="desktop_menu">
                 <button class="desktop_show orange_btn" id="boton_miembro">
                     ¡Hazte Miembro!
@@ -20,9 +22,13 @@
                     <img src="/public/assets/icons/Customer.svg" alt="">
                     Identifícate
                 </button>
-                <img src="/public/assets/icons/Shopping_Basket.svg" alt="">
+                <a href="#">
+                    <img src="/public/assets/icons/Shopping_Basket.svg" alt="">
+                </a>
             </div>
-            <img class="desktop_hide" src="/public/assets/icons/Customer.svg" alt="">
+            <a href="/HTML/socios.html">
+                <img class="desktop_hide" src="/public/assets/icons/Customer.svg" alt="">
+            </a>
             <img class="desktop_hide" src="/public/assets/icons/Menu.svg" alt="">
             <input class="desktop_hide" type="checkbox" name="" id="menu_mobile">
             <div class="nav_mobile">
@@ -30,12 +36,12 @@
                 </div>
                 <nav>
                     <ul>
-                        <li>El Club</li>
-                        <li>Tienda</li>
-                        <li>Reserva</li>
-                        <li>Clases</li>
-                        <li>Contacto</li>
-                        <li>Blog</li>
+                        <li><a href="/HTML/club.html">El Club</a></li>
+                        <li><a href="/HTML/tienda.html">Tienda</a></li>
+                        <li><a href="#">Reserva</a></li>
+                        <li><a href="#">Clases</a></li>
+                        <li><a href="#">Contacto</a></li>
+                        <li><a href="#">Blog</a></li>
                     </ul>
                 </nav>
             </div>
@@ -47,12 +53,12 @@
                 continuación</p>
             <nav class="desktop_show">
                 <ul>
-                    <li>El Club</li>
-                    <li>Tienda</li>
-                    <li>Reserva</li>
-                    <li>Clases</li>
-                    <li>Contacto</li>
-                    <li>Blog</li>
+                    <li><a href="/HTML/club.html">El Club</a></li>
+                    <li><a href="/HTML/tienda.html">Tienda</a></li>
+                    <li><a href="#">Reserva</a></li>
+                    <li><a href="#">Clases</a></li>
+                    <li><a href="#">Contacto</a></li>
+                    <li><a href="#">Blog</a></li>
                 </ul>
             </nav>
         </div>
