--- a/HTML/socios.html
+++ b/HTML/socios.html
@@ -46,7 +46,7 @@
                 </nav>
             </div>
         </div>
-        <div id="portada">
+        <div class="portada desktop_show">
             <p class="desktop_hide">¡Bienvenidos a EivissaPadel! Si aún no eres miembro de nuestro club, descubre
                 las ventajas e
                 inscríbete a
