--- a/HTML/socios.html
+++ b/HTML/socios.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Become a Member</title>
     <link rel="stylesheet" href="../CSS/style.css">
+    <link rel="icon" type="image/x-icon" href="../public/assets/icons/favicon.svg">
+
 </head>
 
 <body>
